backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pi-shield
  labels:
    name: pi-shield
    app: pi-shield
